--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.akash.firebase.MainActivity">
-
-
+    tools:context="com.example.akash.firebase.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteY="8dp"
+        tools:ignore="MissingConstraints">
 
         <TextView
-            android:text="Register"
+            android:text="Login"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_margin="15dp"
             android:textAlignment="center"
@@ -49,22 +48,24 @@
             tools:layout_editor_absoluteY="232dp" />
 
         <Button
-            android:id="@+id/buttonRegester"
+            android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Regester"
+            android:text="Login"
             android:layout_margin="15dp"
             android:ems="15"
             tools:layout_editor_absoluteX="31dp"
             tools:layout_editor_absoluteY="184dp"/>
 
         <TextView
-            android:id="@+id/textViewSignIn"
-            android:text="Have an account? Login Here"
+            android:id="@+id/textViewSignUp"
+            android:text="Not having an Account? SignUp Here"
             android:layout_margin="15dp"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
+
+
 </android.support.constraint.ConstraintLayout>
